spinner item layout

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -9,4 +9,5 @@
     <color name="light_grey">#F0F0F0</color>
     <color name="text_default">#FFFFFF</color>
     <color name="input_background">#3C3C3C</color>
+    <color name="input_text">#FFFFFF</color>
 </resources>
