--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="light_grey">#F0F0F0</color>
     <color name="text_default">#000000</color>
     <color name="input_background">#FFFFFF</color>
+    <color name="input_text">#000000</color>
 </resources>
