--- a/app/src/main/res/layout/fragment_create_event.xml
+++ b/app/src/main/res/layout/fragment_create_event.xml
@@ -51,6 +51,7 @@
                 android:layout_marginEnd="16dp"
                 android:clickable="true"
                 android:focusable="true"
+                android:contentDescription="event picture"
                 android:src="@drawable/calendar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -89,16 +90,15 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="16dp"
-
+                android:background="@drawable/rounded_corners_focus"
+                android:popupBackground="@drawable/rounded_corners_focus"
+                tools:listitem="@layout/item_spinner_category"
                 android:spinnerMode="dropdown"
-
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/input_layout_name_event"
                 />
-<!--            android:background="@drawable/blue_outline"-->
-<!--            android:popupBackground="@drawable/blue_outline_white_background"-->
-<!--            tools:listitem="@layout/item_category"-->
+
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/input_layout_location_event"
