--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -3,12 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_event"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="220dp"
+        android:layout_marginTop="16dp"
         android:maxHeight="300dp"
         android:minHeight="200dp"
         android:scaleType="centerCrop"
@@ -47,12 +48,14 @@
         android:id="@+id/tv_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/rounded_corners"
-        android:text="15.00€"
         android:paddingHorizontal="4dp"
         android:paddingVertical="2dp"
+        android:text="15.00€"
+        android:textFontWeight="700"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_event"
         app:layout_constraintEnd_toEndOf="@+id/iv_event" />
 
@@ -68,7 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_hour" />
 
     <TextView
-        android:id="@+id/tv_person"
+        android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
