--- a/app/src/main/res/layout/fragment_connexion.xml
+++ b/app/src/main/res/layout/fragment_connexion.xml
@@ -43,7 +43,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title2">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tf_email2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,7 +69,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input_layout_email2">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tf_password2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
