--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -76,7 +76,7 @@
             android:text="Place"
             android:textColor="@color/text_default"
             app:layout_constraintEnd_toStartOf="@+id/tv_price"
-            app:layout_constraintStart_toEndOf="@+id/iv_mark"
+            app:layout_constraintStart_toEndOf="@+id/iv_place"
             app:layout_constraintTop_toBottomOf="@+id/iv_preview" />
 
         <TextView
@@ -120,7 +120,7 @@
             app:layout_constraintTop_toBottomOf="@+id/divider" />
 
         <ImageView
-            android:id="@+id/iv_mark"
+            android:id="@+id/iv_place"
             android:layout_width="wrap_content"
             android:layout_height="24dp"
             android:layout_marginStart="16dp"
@@ -160,12 +160,12 @@
             android:layout_height="24dp"
             android:layout_marginEnd="16dp"
             android:src="@drawable/filled_star"
-            app:layout_constraintBottom_toBottomOf="@+id/textView6"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_mark"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView6" />
+            app:layout_constraintTop_toTopOf="@+id/tv_mark" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tv_mark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -188,7 +188,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_description" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/tv_interest"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -200,8 +200,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/divider2" />
 
+        <TextView
+            android:id="@+id/tv_participate"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="0 participant"
+            android:textColor="@color/text_default"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_interest" />
+
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button_participate"
             style="@style/Button_Red"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -211,19 +223,8 @@
             android:text="Participer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_participate" />
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="0 participant"
-            android:textColor="@color/text_default"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
