--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_hour" />
 
     <TextView
-        android:id="@+id/tv_date"
+        android:id="@+id/tv_nb_person"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
