--- a/app/src/main/res/drawable/circle_background.xml
+++ b/app/src/main/res/drawable/circle_background.xml
@@ -1,4 +1,8 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="@color/input_background" />
-</shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="?android:colorControlHighlight">
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="@color/input_background" />
+        </shape>
+    </item>
+</ripple>
