--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -13,7 +13,7 @@
         <ImageView
             android:id="@+id/iv_preview"
             android:layout_width="0dp"
-            android:layout_height="300dp"
+            android:layout_height="350dp"
             android:scaleType="centerCrop"
             android:src="@drawable/logo_gradient"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="4dp"
             android:text="Name"
             android:textColor="@color/text_default"
             android:textSize="20sp"
@@ -71,10 +71,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
             android:text="Place"
             android:textColor="@color/text_default"
+            android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@+id/tv_price"
             app:layout_constraintStart_toEndOf="@+id/iv_place"
             app:layout_constraintTop_toBottomOf="@+id/iv_preview" />
@@ -84,13 +85,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="4dp"
             android:background="@drawable/rounded_corners"
             android:paddingHorizontal="4dp"
-            android:textColorHint="@color/input_text"
             android:paddingVertical="2dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:text="15.00€"
             android:textColor="@color/text_default"
+            android:textColorHint="@color/input_text"
+            android:textFontWeight="700"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/iv_preview"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -103,6 +108,7 @@
             android:layout_marginEnd="16dp"
             android:text="Date - hour"
             android:textColor="@color/text_default"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_place" />
@@ -124,7 +130,7 @@
             android:id="@+id/iv_place"
             android:layout_width="wrap_content"
             android:layout_height="24dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="20dp"
             android:src="@drawable/location_mark"
             app:layout_constraintBottom_toBottomOf="@+id/tv_place"
             app:layout_constraintStart_toStartOf="parent"
@@ -151,6 +157,7 @@
             android:layout_marginEnd="16dp"
             android:text="Content decription"
             android:textColor="@color/text_default"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_title_description" />
@@ -172,6 +179,7 @@
             android:layout_marginEnd="8dp"
             android:text="4.3"
             android:textColor="@color/text_default"
+            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@+id/tv_title_description"
             app:layout_constraintEnd_toStartOf="@+id/imageView3"
             app:layout_constraintTop_toTopOf="@+id/tv_title_description" />
@@ -197,6 +205,7 @@
             android:layout_marginEnd="16dp"
             android:text="0 intéressé"
             android:textColor="@color/text_default"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/divider2" />
@@ -209,6 +218,7 @@
             android:layout_marginEnd="16dp"
             android:text="0 participant"
             android:textColor="@color/text_default"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_interest" />
