Show profile information and fix register to have info on firestore

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -46,7 +46,7 @@
         app:strokeWidth="2dp" />
 
     <TextView
-        android:id="@+id/tv_title"
+        android:id="@+id/tv_profile_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
