--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="24dp"
         android:background="@drawable/circle_background"
         android:contentDescription="return button"
-        android:src="@drawable/notification"
+        android:src="@drawable/parameter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
