--- a/app/src/main/res/layout/item_spinner_category.xml
+++ b/app/src/main/res/layout/item_spinner_category.xml
@@ -24,6 +24,7 @@
         tools:text="Category" />
 
     <ImageView
+        android:id="@+id/iv_arrow"
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_alignParentEnd="true"
