--- a/app/src/main/res/layout/fragment_connexion.xml
+++ b/app/src/main/res/layout/fragment_connexion.xml
@@ -38,23 +38,22 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="128dp"
         android:layout_marginEnd="16dp"
-        app:boxBackgroundMode="none"
+        app:boxStrokeColor="#00FFFFFF"
+        app:boxStrokeWidth="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_title2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tf_email2"
+            style="@style/Textfield_red_stroke"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/edit_text_selector"
             android:ems="10"
-
             android:hint="Email"
-            android:inputType="text|textEmailAddress"
-            android:textColor="@color/black" />
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -64,23 +63,22 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        app:boxBackgroundMode="none"
+        app:boxStrokeColor="#00FFFFFF"
+        app:boxStrokeWidth="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/input_layout_email2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/tf_password2"
+            style="@style/Textfield_red_stroke"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/edit_text_selector"
             android:ems="10"
-
             android:hint="Mot de passe"
-            android:inputType="text|textPassword"
-            android:textColor="@color/black" />
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
